# svg-toolkit

./: README.md  setup.cfg  sketch.py
src/svg_toolkit/: __init__.py
tests/: spatial.py  test_cogs.py
