[metadata]
name = svg_toolkit
version = 1.0
author = Tom Dalby
author_email = thomasjackdalby@gmail.com
description = A graphics API for creating SVG files
keywords = svg
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*